# GenV

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: mingw32.cmake
cmake/psx/: executable.ld  setup.cmake  toolchain.cmake  tools.cmake
cmake/win/: toolchain.cmake
cmake/win32/: setup.cmake  toolchain.cmake  tools.cmake
doc/: Example.cpp  compile.md
img/: DXUX.icns
lib/libc/: CMakeLists.txt
lib/libc/libc/: precrt0.s  psx_serial.h  random.c  serial.c  string.h
lib/psx/: CMakeLists.txt  README.md
lib/psx/libc/: misc.c  stdio.h  stdlib.h
script/win/: configure.ps1
src/: main.cpp  resources.h
src/app/: app.cpp  app.hpp  applist.hpp
src/app/builtin/errorscr/: errorscr.cpp  errorscr.hpp
src/app/builtin/loadscr/: loadscr.cpp  loadscr.hpp
src/app/builtin/textload/: textload.hpp
src/app/builtin/tmss/: tmss.cpp
src/app/gauntlet/: gaunt_app.cpp  gaunt_app.hpp  gaunt_field.cpp  gaunt_field.hpp  gaunt_screens.cpp  gaunt_screens.hpp  gaunt_sub.hpp  gaunt_title.cpp  gaunt_title.hpp
src/app/gauntlet/field/: floortile.cpp  floortile.hpp  map.cpp  map.hpp  mapmeta.h  walltile.cpp  walltile.hpp
src/app/ps1/: biosldr.cpp  biosldr.hpp  shellapp.cpp  shellapp.hpp
src/app/sadmac/: sadmac.cpp  sadmac.hpp
src/app/tmss/: tmss.cpp  tmss.hpp
src/common/formats/: soundfile.cpp  soundfile.hpp  wav.cpp
src/common/objects/: data.hpp  file.cpp  file.hpp  font.hpp  models.hpp  object_base.hpp  sound.hpp  sprite.hpp  texture.cpp  texture.hpp  tile.hpp
src/common/services/: appmgr.cpp  appmgr.hpp  audio.hpp  input.hpp  null.cpp  null.hpp  services.cpp  services.hpp  storage.cpp  storage.hpp  system.hpp  vesa.hpp  video.hpp
src/common/services/sys/: timer.cpp  timer.hpp
src/common/services/video/: color.hpp  vesa.hpp  video.hpp
src/common/util/: hash.cpp  hash.hpp  ifloat.hpp  log.cpp  log.hpp  misc.cpp  misc.hpp  rect.h  templates.hpp  text.cpp  text.h  tween.cpp  tween.hpp
src/example/: CMakeLists.txt  example.cpp
src/genv_common/: CMakeLists.txt
src/genv_common/app/: app.cpp  app.hpp
src/genv_common/app/builtin/errorscr/: errorscr.cpp  errorscr.hpp
src/genv_common/app/builtin/loadscr/: loadscr.cpp
src/genv_common/app/builtin/textload/: textload.cpp  textload.hpp
src/genv_common/app/builtin/tmss/: tmss.cpp  tmss.hpp
src/genv_common/common/formats/: riff.cpp  riff.hpp  soundfile.cpp  wav.hpp
src/genv_common/common/objects/: data.hpp  file.cpp  file.hpp  font.hpp  models.hpp  object.cpp  object.hpp  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  tile.cpp  tile.hpp
src/genv_common/common/objects/texture/: missingtex.c  missingtex.h
src/genv_common/common/services/: appmgr.hpp  audio.hpp  services.cpp  services.hpp  storage.hpp  system.hpp
src/genv_common/common/services/arcade/: arcade.cpp  arcade.hpp  errorcodes.hpp  nvram.hpp
src/genv_common/common/services/video/: color.hpp  vesa.hpp  video.cpp  video.hpp
src/genv_common/common/util/: hash.cpp  ifloat.cpp  misc.cpp  misc.hpp  rect.h  templates.hpp  text.cpp  tween.cpp  tween.hpp
src/genv_hw/: hardware.hpp
src/genv_hw/psx/: CMakeLists.txt  audio.hpp  registers.h  system.cpp  system.hpp
src/genv_hw/psx/573/: jamma.h  registers573.hpp  rtc.cpp  sys573.cpp  sys573.hpp
src/genv_hw/psx/audio/: spu.cpp  spu.hpp
src/genv_hw/psx/file/: pcdrv.h  pcdrv.s
src/genv_hw/psx/system/: sys.c  sys.h  sys.s  unhandledexc.c
src/genv_hw/psx/video/: gpucmd.h  video.cpp  video.hpp
src/genv_hw/win32/: CMakeLists.txt  system.hpp  targetver.h  win_platform.cpp  window-mgr.cpp
src/genv_hw/win32/audio/: audio.cpp  directsound.hpp
src/genv_hw/win32/res/: icon.rc  info.rc
src/genv_hw/win32/video/: gpu-d3d.cpp  gpu-d3d.hpp  video.hpp  vidutil.hpp
src/hw/: CMakeLists.txt  hardware.hpp
src/hw/psx/: CMakeLists.txt  audio.cpp  system.cpp  system.hpp
src/hw/psx/video/: video.hpp
src/hw/win32/: CMakeLists.txt  system.cpp  system.hpp  targetver.h  win_platform.cpp  window-mgr.cpp  window-mgr.hpp
src/hw/win32/audio/: audio.cpp  audio.hpp  directsound.cpp  directsound.hpp
src/hw/win32/file/: file.cpp  file.hpp
src/hw/win32/res/: icon.rc  info.rc
src/hw/win32/video/: gpu-d3d.cpp  gpu-d3d.hpp  gpu-sdl.cpp  gpu-sdl.hpp  video.cpp  video.hpp  vidutil.cpp  vidutil.hpp
toolchains/: mingw32.cmake
